Upgrading to Java 21